--- a/src/gtestrunner/RunnerToolWindow.form
+++ b/src/gtestrunner/RunnerToolWindow.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gtestrunner.RunnerToolWindow">
-  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
+  <grid id="27dc6" binding="root" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="606" height="400"/>
@@ -13,7 +13,7 @@
     <children>
       <splitpane id="b3f6e" binding="_splitPane">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -72,7 +72,7 @@
       </component>
       <toolbar id="1432e">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="20"/>
           </grid>
         </constraints>
@@ -89,6 +89,7 @@
               <borderPainted value="false"/>
               <contentAreaFilled value="true"/>
               <icon value="gtestrunner/images/Discover.png"/>
+              <opaque value="false"/>
               <text value=""/>
             </properties>
           </component>
@@ -96,7 +97,9 @@
             <constraints/>
             <properties>
               <borderPainted value="false"/>
+              <contentAreaFilled value="true"/>
               <icon value="gtestrunner/images/RunAll.png"/>
+              <opaque value="false"/>
               <text value=""/>
             </properties>
           </component>
@@ -106,12 +109,47 @@
               <borderPainted value="false"/>
               <contentAreaFilled value="true"/>
               <icon value="gtestrunner/images/RunSelected.png"/>
-              <opaque value="true"/>
+              <opaque value="false"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="44c02" class="javax.swing.JButton" binding="_stopButton">
+            <constraints/>
+            <properties>
+              <borderPainted value="false"/>
+              <icon value="gtestrunner/images/Stop.png"/>
+              <opaque value="false"/>
               <text value=""/>
             </properties>
           </component>
         </children>
       </toolbar>
+      <grid id="3d32" binding="_summaryCards" layout-manager="CardLayout" hgap="0" vgap="0">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="a7aac" class="javax.swing.JTextField" binding="_runSummary">
+            <constraints>
+              <card name="SummaryCard"/>
+            </constraints>
+            <properties>
+              <editable value="false"/>
+            </properties>
+          </component>
+          <component id="3927" class="javax.swing.JProgressBar" binding="_progressBar">
+            <constraints>
+              <card name="ProgressCard"/>
+            </constraints>
+            <properties>
+              <string value=""/>
+              <stringPainted value="false"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
