--- a/src/gtestrunner/RunnerToolWindow.form
+++ b/src/gtestrunner/RunnerToolWindow.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="gtestrunner.RunnerToolWindow">
-  <grid id="27dc6" binding="_rootView" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
-    <margin top="0" left="0" bottom="0" right="0"/>
+  <grid id="27dc6" binding="_rootView" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="5">
+    <margin top="5" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="606" height="400"/>
     </constraints>
@@ -13,7 +13,7 @@
     <children>
       <splitpane id="b3f6e" binding="_splitPane">
         <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
@@ -62,17 +62,9 @@
           </scrollpane>
         </children>
       </splitpane>
-      <component id="65b63" class="javax.swing.JTextField" binding="_executablePathArea">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <toolbar id="1432e">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="2" hsize-policy="0" anchor="8" fill="2" indent="0" use-parent-layout="false">
             <preferred-size width="-1" height="20"/>
           </grid>
         </constraints>
@@ -144,9 +136,11 @@
       </toolbar>
       <grid id="3d32" binding="_summaryCards" layout-manager="CardLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <focusable value="false"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="a7aac" class="javax.swing.JTextField" binding="_runSummary">
@@ -155,6 +149,7 @@
             </constraints>
             <properties>
               <editable value="false"/>
+              <text value="Test run summary"/>
             </properties>
           </component>
           <component id="3927" class="javax.swing.JProgressBar" binding="_progressBar">
@@ -168,6 +163,19 @@
           </component>
         </children>
       </grid>
+      <component id="65b63" class="javax.swing.JTextField" binding="_executablePathArea">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <hspacer id="3aef7">
+        <constraints>
+          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
     </children>
   </grid>
 </form>
