- Format nice message if the process crashes during test run or is not a gtest exe (xml report not found). - Bug: An empty temp file for the report is created instead of just a file name. - Bug: Console tab allows editing.

--- a/src/gtestrunner/ConsoleOutputWindow.form
+++ b/src/gtestrunner/ConsoleOutputWindow.form
@@ -17,7 +17,9 @@
         <children>
           <component id="ecc11" class="javax.swing.JTextArea" binding="textArea1" default-binding="true">
             <constraints/>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
