--- a/src/gtestrunner/RunnerToolWindow.form
+++ b/src/gtestrunner/RunnerToolWindow.form
@@ -201,7 +201,7 @@
           </grid>
         </children>
       </grid>
-      <component id="65b63" class="javax.swing.JTextField" binding="_executablePathArea">
+      <component id="7bd9e" class="javax.swing.JComboBox" binding="_availableTargets">
         <constraints>
           <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
